kubernetes/apps/ai/toolhive/config/httpRoute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
spec:
  hostnames:
    - mcp.mortebrume.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
